--- a/shows.html
+++ b/shows.html
@@ -4,7 +4,7 @@
 <head>
    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title> Jessica Creiglow: Web Developer</title>
+  <title> The Creiglows Make Music</title>
 
 <!-- Reset CSS -->
   <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
