fixed youtube link on shows page

--- a/shows.html
+++ b/shows.html
@@ -40,7 +40,7 @@
           <a class="navItem hvr-grow-shadow" href="./index.html">About</a>
         </li>
         <li role="presentation">
-          <a class="navItem hvr-grow-shadow" href="https://www.youtube.com/channel/UCe7Gay0LAEUYNTUeNEwloCw">Music</a>
+          <a class="navItem hvr-grow-shadow" href="https://www.youtube.com/channel/UCe7Gay0LAEUYNTUeNEwloCw" target="blank">Music</a>
         </li>
         <li role="presentation">
           <a class="navItem hvr-grow-shadow" href="./shows.html">Shows</a>
